[package]
name = "uuid-str"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MPL-2.0"
readme = "README.md"
repository = "https://github.com/menhera-org/uuid-str"
description = "Static-length string representation for UUID"
homepage = "https://www.menhera.org/rust-package-uuid-str/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.5", features = ["v4"] }
